Show all asked questions page

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,12 +13,12 @@ html, body {
     color: #636b6f;
     font-family: 'Nunito', sans-serif;
     font-weight: 200;
-    height: 100vh;
+    min-height: 100vh;
     margin: 0;
 }
 
 .full-height {
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .flex-center {
