--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10950,12 +10950,12 @@ body {
   color: #636b6f;
   font-family: "Nunito", sans-serif;
   font-weight: 200;
-  height: 100vh;
+  min-height: 100vh;
   margin: 0;
 }
 
 .full-height {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .flex-center {
