--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,6 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
-
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap');
 // Variables
 @import 'variables';
 
@@ -17,7 +17,7 @@ html, body {
 }
 
 .full-height {
-    min-height: 100vh;
+    min-height: 70vh;
 }
 
 .flex-center {
@@ -36,12 +36,14 @@ html, body {
     top: 18px;
 }
 
-.content {
+h1 {
+    color: #4A6258;
+    font-size: 68px;
+    line-height: 55px;
+    font-family: 'Teko', sans-serif;
     text-align: center;
-}
-
-.title {
-    font-size: 84px;
+    border: 5px solid #4A6258;
+    padding: 15px;
 }
 
 .links > a {
@@ -58,10 +60,10 @@ html, body {
     margin-bottom: 30px;
 }
 
-
 .footer {
     color: #636b6f;
     text-align: center;
+    background-color:#F3F2F0;
 }
 
 .content {
@@ -74,9 +76,15 @@ html, body {
     flex:1 1 auto;
  }
 
-
  .alert {
     ul {
       list-style: none;
     }
   }
+
+  .title-container {
+    background: url("/images/homepageimage.jpeg");
+    background-size: cover;
+    background-position: center bottom;
+  }
+
