--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10012,10 +10012,11 @@ html, body {
   font-weight: 200;
   min-height: 100vh;
   margin: 0;
+  text-align: center;
 }
 
 .full-height {
-  min-height: 70vh;
+  min-height: 80vh;
 }
 
 .flex-center {
@@ -10036,12 +10037,16 @@ html, body {
 
 h1 {
   color: #4A6258;
-  font-size: 68px;
+  font-size: 60px;
   line-height: 55px;
   font-family: "Teko", sans-serif;
-  text-align: center;
   border: 5px solid #4A6258;
   padding: 15px;
+  text-align: center;
+}
+
+h4 {
+  color: #AF6D4F;
 }
 
 .links > a {
@@ -10064,10 +10069,23 @@ h1 {
   background-color: #F3F2F0;
 }
 
+.card {
+  box-shadow: 5px 10px 18px #888888;
+}
+
+.card-title {
+  color: #4A6258;
+}
+
+.title-line {
+  width: 20%;
+  border-top: 1px solid #AF6D4F;
+}
+
 .content {
   width: 80%;
   margin: 0 auto;
-  overflow: scroll;
+  text-align: center;
 }
 
 .flex-fill {
@@ -10080,6 +10098,29 @@ h1 {
 
 .title-container {
   background: url("/images/homepageimage.jpeg");
-  background-size: cover;
-  background-position: center bottom;
+  background-position: right top;
+}
+
+.flex-container {
+  display: flex;
+  background-color: white;
+  height: 90vh;
+}
+
+.left-side {
+  flex-grow: 4;
+  overflow: hidden;
+  -o-object-fit: fill;
+     object-fit: fill;
+}
+
+.right-side {
+  width: 45%;
+}
+.right-side p {
+  padding: 25px;
+}
+
+.profile-button {
+  border: 1px solid #AF6D4F;
 }
