--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,10 +14,11 @@ html, body {
     font-weight: 200;
     min-height: 100vh;
     margin: 0;
+    text-align: center;
 }
 
 .full-height {
-    min-height: 70vh;
+    min-height: 80vh;
 }
 
 .flex-center {
@@ -38,13 +39,18 @@ html, body {
 
 h1 {
     color: #4A6258;
-    font-size: 68px;
+    font-size: 60px;
     line-height: 55px;
     font-family: 'Teko', sans-serif;
-    text-align: center;
     border: 5px solid #4A6258;
     padding: 15px;
+    text-align: center;
 }
+
+h4 {
+    color: #AF6D4F;
+}
+
 
 .links > a {
     color: #636b6f;
@@ -66,10 +72,23 @@ h1 {
     background-color:#F3F2F0;
 }
 
+.card {
+    box-shadow: 5px 10px 18px #888888;
+}
+
+.card-title {
+    color: #4A6258
+}
+
+.title-line {
+    width: 20%;
+    border-top: 1px solid #AF6D4F;
+}
+
 .content {
     width: 80%;
     margin: 0 auto;
-    overflow: scroll;
+    text-align: center;
 }
 
 .flex-fill {
@@ -84,7 +103,30 @@ h1 {
 
   .title-container {
     background: url("/images/homepageimage.jpeg");
-    background-size: cover;
-    background-position: center bottom;
+    background-position: right top;
   }
 
+.flex-container {
+    display:flex;
+    background-color: white;
+    height: 90vh;
+}
+
+.left-side {
+
+    flex-grow: 4;
+    overflow:hidden;
+    object-fit: fill;
+    
+}
+
+.right-side {
+    width: 45%;
+    p {
+        padding: 25px;
+    }
+}
+
+.profile-button {
+    border: 1px solid #AF6D4F;
+}
