Add about page text and styling

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10040,7 +10040,7 @@ h1 {
   font-size: 60px;
   line-height: 55px;
   font-family: "Teko", sans-serif;
-  border: 5px solid #4A6258;
+  border: 4px solid #4A6258;
   padding: 15px;
   text-align: center;
 }
@@ -10080,6 +10080,10 @@ h4 {
 .title-line {
   width: 20%;
   border-top: 1px solid #AF6D4F;
+}
+
+h5 {
+  color: #AF6D4F;
 }
 
 .content {
@@ -10127,4 +10131,23 @@ h4 {
 
 .btn {
   background-color: #4A6258;
+}
+
+.about-container {
+  background-color: #4A6258;
+  min-height: 100vh;
+  width: 100%;
+  overflow: scroll;
+  padding-bottom: 100px;
+}
+
+.about-content {
+  background-color: #F3F2F0;
+  width: 60%;
+  margin: 0 auto;
+  display: table;
+  padding: 30px;
+}
+.about-content li {
+  text-align: left;
 }
