--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -155,7 +155,15 @@ h5 {
     padding: 30px;
 
     li {
-        list-style-;
         text-align: left;
+    }
+}
+
+.container-profile {
+    padding-bottom: 100px;
+    width: 100%;
+
+    img {
+        width: 60%;
     }
 }
